# neurograd

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  MEMORY_ANALYSIS.md  MEMORY_OPTIMIZATIONS.MD  README.md  _ipython-input-9-profile  alexnet (mobilenet) - ImageNet 1k.ipynb  alexnet (mobilenet).ipynb  alexnet.ipynb  analyze.py  analyze.txt  build.py  conv2d_advanced_nns.ipynb  conv2d_nns.ipynb  deep_conv2d_cifar10.ipynb  intensive_profile.py  lenet5.ipynb  linear_nns.ipynb  neural_network_training.ipynb  neurograd_test.ipynb  ops_mem_profile.txt  profile_alexnet.py  profiling.json  profiling.py  pyproject.toml  pytorch_train.py  requirements.txt  results.txt  results_after.txt  setup.py  test_memory_monitor.py
.github/: copilot-instructions.md
neurograd/: __init__.py  py.typed  tensor.py
neurograd/amp/: __init__.py  autocast.py  grad_scaler.py  utils.py
neurograd/functions/: __init__.py  activations.py  arithmetic.py  base.py  batch_cudnn.py  conv.py  conv_dot.py  linalg.py  math.py  normalize.py  normalizer_new.py  reductions.py  reductions_old.py  tensor_ops.py
neurograd/nn/: __init__.py  initializers.py  losses.py  metrics.py  module.py
neurograd/nn/layers/: __init__.py  batchnorm.py  conv.py  dropout.py  linear.py
neurograd/optim/: __init__.py  adam.py  adamw.py  optimizer.py  rmsprop.py  sgd.py
neurograd/transforms/: base.py
neurograd/utils/: aliases.py  data.py  device.py  grad_check.py
tests/: test_transforms.py
